fix: small changes and fixes

--- a/src/Body/components/ResponseList.css
+++ b/src/Body/components/ResponseList.css
@@ -1,5 +1,7 @@
 .Response-list {
-    text-align: center;
+    display: flex;
+    align-content: center;
+    align-items: center;
 }
 
 .List-item {
