fix: bigger fonts for header

--- a/src/Header/HeaderWrapper.css
+++ b/src/Header/HeaderWrapper.css
@@ -10,7 +10,6 @@
     color:white !important;
 }
 
-.Header-wrapper .ui.medium.header {
+.Header-wrapper .ui.huge.header {
     color:white !important;
-    padding-bottom: 10px;
 }
