--- a/src/Footer/FooterWrapper.css
+++ b/src/Footer/FooterWrapper.css
@@ -1,11 +1,9 @@
 .Footer-wrapper {
-    position: absolute;
-    bottom: 0;
+    position: sticky;
     width: 100%;
     height: 50px;
     background-color: black;
     color: white;
     text-align: center;
-    padding-top: 30px;
 }
 
