--- a/src/Footer/FooterWrapper.css
+++ b/src/Footer/FooterWrapper.css
@@ -1,7 +1,8 @@
 .Footer-wrapper {
-    position: sticky;
-    width: 100%;
-    height: 50px;
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
     background-color: black;
     color: white;
     text-align: center;
